syntax = "proto3";

package lastbackend.example;

option go_package = "github.com/lastbackend/toolkit/examples/service/gen/ptypes;typespb";

import "validate/validate.proto";


// ============================================================================
// Request ====================================================================
// ============================================================================

message HelloWorldRequest {
  string name = 1 [(validate.rules).string.min_len = 1];
  string type = 2 [(validate.rules).string.max_len = 1024];
  map<string, string> data = 3 [(validate.rules).map.min_pairs = 1];
}

// ============================================================================
// Response ===================================================================
// ============================================================================

message HelloWorldResponse {
  string id = 1;
  string name = 2;
  string type = 3;
  map<string, string> data = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}
