syntax = "proto3";

package toolkit;

option go_package = "github.com/lastbackend/toolkit/protoc-gen-toolkit/toolkit/options;annotations";

import "google/protobuf/descriptor.proto";

message Plugin {
  string plugin = 1;
  string prefix = 2;
}

message Service {
  string service = 1;
  string package = 2;
}

extend google.protobuf.FileOptions {
  repeated Plugin plugins = 50001;
  repeated Service services = 50002;
  TestSpec tests_spec = 50004;
}

message Runtime {
  enum Server {
    GRPC = 0;
    HTTP = 1;
    WEBSOCKET_PROXY = 2;
    WEBSOCKET = 3;
  }
  repeated Plugin plugins = 1;
  repeated Server servers = 2;
}

extend google.protobuf.ServiceOptions {
  Runtime runtime = 70001;
  Server server = 70002;
}

message TestSpec {
  MockeryTestsSpec mockery = 1;
}

message MockeryTestsSpec {
  string package = 1;
}

extend google.protobuf.MethodOptions {
  Route route = 60001;
}

message Server {
  repeated string middlewares = 1;
}

message Route {
  repeated string middlewares = 1;
  repeated string exclude_global_middlewares = 2;
  oneof server {
    HttpProxy http_proxy = 3;
    WsProxy websocket_proxy = 4;
    bool websocket = 5;
  }
}

message HttpProxy {
  string service = 1;
  string method = 2;
}

message WsProxy {
  string service = 1;
  string method = 2;
}
